[package]
name = "lemonaid"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An HTTP client for the Citra Space API"
readme = "README.md"
repository = "https://github.com/citra-space/lemonaid_rust"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"